# MorseCodePy

./: .editorconfig  .gitignore  README.md  license.txt  pyproject.toml  setup.py
Legacy/: play_pygame.py  test_play_pygame.py  test_play_sounddevice.py
MorseCodePy/: __init__.py  audio_manager.py  chart.py  cli.py  codes.py  decode.py  encode.py  main.py  play.py  play_pygame.py  play_sounddevice.py  setup_logging.py  utilities.py
MorseCodePy/codes/: decodes.json  encodes.json
tests/: test_audio_play.py  test_chart.py  test_decoding.py  test_encoding.py  test_play_pygame.py  test_play_sounddevice.py
