[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MorseCodePy"
version = "4.1"
description = "Easily Encode & Decode Morse Code"
dependencies = []
requires-python = ">=3.11"
authors = [{ name = "CrazyFlyKite", email = "karpenkoartem2846@gmail.com" }]
readme = "README.md"
license = { file = "license.txt" }
classifiers = [
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Topic :: Utilities"
]

[project.urls]
Repository = "https://github.com/CrazyFlyKite/MorseCodePy"
Download = "https://pypi.org/project/MorseCodePy"

[options]
packages = ["MorseCodePy"]
include_package_data = true
package_data = { MorseCodePy = ["sounds/*.wav", "codes/*.json"] }

[project.scripts]
morsecodepy = "MorseCodePy.cli:main"